2009-10-26  Charles Wilson  <cygwin@cwilson.fastmail.fm>

	* lib/pseudo-reloc.c (__report_error) [CYGWIN]: Correct size bug
	regarding error messages.

2009-10-25  Charles Wilson  <cygwin@cwilson.fastmail.fm>

	Sync pseudo-reloc.c with mingw64
	* lib/psuedo-reloc.c: Remove unnecessary includes.
	Forward declare _pei386_runtime_relocator.
	Decorate _image_base__ symbol with macro for
	mingw64 compatibility. Whitespace changes.
	(__print_reloc_error): Renamed to...
	(__report_error): This. "Returns" void, and
	always aborts. Now used on all platforms.
	(__write_memory): Remove special case error handling
	for different platforms - always call __report_error.
	(do_pseudo_reloc): Remove special case error handling
	for different platforms - always call __report_error.
	(_pei386_runtime_relocator): Decorate _image_base__
	symbol with mingw64 compatibility macro.

2009-10-24  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Remove unused variables sa and sd.

2009-10-23  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Always create file with default
	security descriptor and fix descriptor afterwards.  Change comment to
	explain why.
	* security.cc (alloc_sd): Drop setting the SE_DACL_PROTECTED flag.
	* wincap.cc: Remove has_dacl_protect throughout.
	* wincap.h: Ditto.

2009-10-23  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_random.cc (fhandler_dev_random::lseek): Allow negative
	dummy file positions as on Linux.

2009-10-20  Corinna Vinschen  <corinna@vinschen.de>

	* registry.cc (reg_key::get_int): Add alternative implementation
	taking WCHAR strings.
	(reg_key::set_int): Ditto.
	(reg_key::get_string): Ditto.
	(reg_key::set_string): Ditto.
	* registry.h (struct reg_key): Add prototypes for added methods.

2009-10-20  Corinna Vinschen  <corinna@vinschen.de>

	* smallprint.cc (__small_vsprintf): Simplify UNICODE string handling
	and allow empty strings.
