@@ -1,3 +1,15 @@
+2009-10-30  Corinna Vinschen  <corinna@vinschen.de>
+
+	* smallprint.cc (hex_str): New const string.
+	(__rn): Drop str and use hex_str instead.
+	(__small_vsprintf): If 'l' modifier has been found, print subsequent
+	multibyte or wide char string using the s, S, or W options in extended
+	hex value layout.
+
+	* fhandler_disk_file.cc (fhandler_disk_file::readdir): Print WCHAR
+	and resulting multibyte filename in extended hex value layout in
+	debug output.
+
 2009-10-26  Charles Wilson  <cygwin@cwilson.fastmail.fm>
 
 	* lib/pseudo-reloc.c (__report_error) [CYGWIN]: Correct size bug
